--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container-fluid">
         <!-- Title -->
         <h1 class="heading-main" align="center">
-          Help Stop the Spread of Coronavirus and Protect Your Family
+          Help to Stop the Spread of Coronavirus and Protect Your Family
         </h1>
         <div align="center">
           <button
